[package]
name = "api"
version = "0.1.0"
authors = ["Max Dudkin <dudkin.max.v@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
mysql = "20.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "*"
rust-argon2 = "0.8"
sqlx = { version = "*", features = [ "mysql", "runtime-async-std-native-tls", "chrono", "time"] }
async-std = { version = "1.6", features = [ "attributes" ] }
validator = { version = "0.12", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.13"
